@@ -1,7 +1,8 @@
 
 include $(top_srcdir)/Makefile.tool-tests.am
 
-dist_noinst_SCRIPTS = filter_stderr
+dist_noinst_SCRIPTS = filter_stderr \
+	filter_ioctl_procmap_query
 
 EXTRA_DIST = \
 	aligned_alloc.vgtest aligned_alloc.stderr.exp \
@@ -19,6 +20,9 @@ EXTRA_DIST = \
 	    dlclose_leak-no-keep.vgtest \
 	dlclose_leak.stderr.exp dlclose_leak.stdout.exp \
 	    dlclose_leak.vgtest \
+	ioctl_procmap_query.stderr.exp \
+		ioctl_procmap_query.stdout.exp \
+		ioctl_procmap_query.vgtest \
 	ioctl-tiocsig.vgtest ioctl-tiocsig.stderr.exp \
 	lsframe1.vgtest lsframe1.stdout.exp lsframe1.stderr.exp \
 	lsframe2.vgtest lsframe2.stdout.exp lsframe2.stderr.exp \
@@ -69,6 +73,10 @@ check_PROGRAMS = \
 	check_execveat \
 	enomem \
 	memalign
+
+if HAVE_PROCMAP_QUERY
+check_PROGRAMS += ioctl_procmap_query
+endif
 
 if HAVE_OPENSSL
 check_PROGRAMS += bug480706
